# junkcraft

./: CMakeLists.txt  README.md  build.sh
include/glad/: glad.h
scripts/: gen_perlin_vecs.py  textures.sh
shaders/: fragment.glsl  fragment_debug.glsl  fragment_sky.glsl  fragment_text.glsl  fragment_ui.glsl  light.glsl  vertex.glsl  vertex_debug.glsl  vertex_sky.glsl  vertex_text.glsl  vertex_ui.glsl
src/: CMakeLists.txt  block.c  block.h  camera.c  camera.h  chunk.c  chunk.h  clock.c  clock.h  config.h  engine.c  engine.h  glad.c  input.c  input.h  junkcraft.c  player.c  player.h  random.c  random.h  shader.c  shader.h  text.c  text.h  texture.c  texture.h  util.c  util.h  window.c  window.h  world.c  world.h
